# chTools-c

./: .gitignore  CMakeLists.txt  README.md  main.c
clog/: log.c  log.h
crc/: CmakeLists.txt  crc.c  crc.h
encode/binary/: CmakeLists.txt  binary.c  binary.h
mq/: messageQueue.c  messageQueue.h
strings/: CmakeLists.txt  cstring.c  cstrings.h  hex.c  hex.h  strings.c  strings.h
